--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -686,7 +686,7 @@
    "id": "4d6eda15",
    "metadata": {},
    "source": [
-    "Third class determines higher death rate\n",
+    "Lower Passenger class determines higher death rate\n",
     "While survival rate was similar among Three classes\n"
    ]
   },
@@ -717,8 +717,8 @@
    "id": "744dc421",
    "metadata": {},
    "source": [
-    "Survived ones belongs to age group 19 - 35\n",
-    "Dead ones belongs to age group 21 - 39"
+    "Survivors tend to be slightly younger, with more children surviving compared to non-survivors.\n",
+    "However, adult age distributions overlap heavily, so age alone isn’t a strong survival predictor."
    ]
   },
   {
