Linear Regression Project Updatee

--- a/Machine Learning/HousePricePrediction.ipynb
+++ b/Machine Learning/HousePricePrediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "be3181f7",
    "metadata": {},
    "outputs": [
@@ -38,9 +38,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "# --- PROGRAM 2: LINEAR REGRESSION ---\n",
-    "#\n",
-    "#1. 2D array dataset (like C++)\n",
+    "\n",
+    "#2D array dataset\n",
     "#\n",
     "data = [\n",
     "[800, 30],\n",
@@ -102,132 +101,6 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3b89ab8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Accuracy: 0.6666666666666666\n",
-      "\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.00      0.00      0.00         0\n",
-      "           1       1.00      0.67      0.80         3\n",
-      "\n",
-      "    accuracy                           0.67         3\n",
-      "   macro avg       0.50      0.33      0.40         3\n",
-      "weighted avg       1.00      0.67      0.80         3\n",
-      "\n",
-      "\n",
-      "--- Enter new student's details for placement prediction ---\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/iqram/Desktop/Coding/Machine Learning/venv/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/home/iqram/Desktop/Coding/Machine Learning/venv/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "/home/iqram/Desktop/Coding/Machine Learning/venv/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1731: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Prediction: Placed 🎉\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/iqram/Desktop/Coding/Machine Learning/venv/lib/python3.12/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LogisticRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "# --- PROGRAM 3: LOGISTIC REGRESSION (PLACEMENT PREDICTION) ---\n",
-    "#\n",
-    "#1. Create Synthetic Dataset for 10 Students\n",
-    "#\n",
-    "data = {\n",
-    "\"Analytical\": [88, 75, 60, 90, 55, 70, 92, 45, 80, 65],\n",
-    "\"Communication\": [85, 78, 55, 88, 50, 65, 90, 40, 82, 60],\n",
-    "\"Overall_Percentage\": [82, 76, 58, 91, 54, 68, 93, 49, 80, 62],\n",
-    "\"Placed\": [1, 1, 0, 1, 0, 1, 1, 0, 1, 0]\n",
-    "}\n",
-    "df = pd.DataFrame(data)\n",
-    "#\n",
-    "# 2. Split data\n",
-    "#\n",
-    "X = df[[\"Analytical\", \"Communication\", \"Overall_Percentage\"]]\n",
-    "y = df[\"Placed\"]\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "X, y, test_size=0.3, random_state=42\n",
-    ")\n",
-    "#\n",
-    "#3. Train Logistic Regression model\n",
-    "#\n",
-    "model = LogisticRegression()\n",
-    "model.fit(X_train, y_train)\n",
-    "#\n",
-    "#4. Evaluate Model\n",
-    "#\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "print(\"Model Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "print(\"\\nClassification Report:\\n\", classification_report(y_test, y_pred))\n",
-    "\n",
-    "#\n",
-    "\n",
-    "#5. Take user input for new student\n",
-    "\n",
-    "print(\"\\n--- Enter new student's details for placement prediction ---\")\n",
-    "\n",
-    "try:\n",
-    "    a = float(input(\"Enter Analytical Skills (0-100): \"))\n",
-    "    \n",
-    "    c = float(input(\"Enter Communication Skills (0-100): \"))\n",
-    "    \n",
-    "    p = float(input(\"Enter Overall Percentage (0-100): \"))\n",
-    "    \n",
-    "    new_student = np.array([[a, c, p]])\n",
-    "    \n",
-    "    prediction = model.predict(new_student)\n",
-    "    \n",
-    "    print(\"\\nPrediction:\", \"Placed 🎉\" if prediction[0] == 1 else \"Not Placed ❌\")\n",
-    "\n",
-    "except:\n",
-    "    \n",
-    "    print(\"Invalid input! Please enter numeric values only.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc12b474",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
