--- a/Machine Learning/Logistic Regression/PlacementPrediction.ipynb
+++ b/Machine Learning/Logistic Regression/PlacementPrediction.ipynb
@@ -16,7 +16,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
-    "# --- PROGRAM 3: LOGISTIC REGRESSION (PLACEMENT PREDICTION) ---\n",
+    "# LOGISTIC REGRESSION (PLACEMENT PREDICTION) ---\n",
     "#\n",
     "#1. Create Synthetic Dataset for 10 Students\n",
     "#\n",
