--- a/Machine Learning/Loan Approval/notebooks/loan_approval.ipynb
+++ b/Machine Learning/Loan Approval/notebooks/loan_approval.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -288,7 +288,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv(\"/content/train.csv\")\n",
+        "df = pd.read_csv(\"../data/train.csv\")\n",
         "df.head()"
       ]
     },
@@ -824,12 +824,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "6nXNdKnggewT"
       },
       "outputs": [],
       "source": [
+        "#Handling Categorical Missing Values\n",
         "df['Gender'].fillna(df['Gender'].mode()[0], inplace=True)\n",
         "df['Married'].fillna(df['Married'].mode()[0], inplace=True)\n",
         "df['Dependents'].fillna(df['Dependents'].mode()[0], inplace=True)\n",
@@ -838,12 +839,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "JL8A3ed7ghtU"
       },
       "outputs": [],
       "source": [
+        "#Handling Numerical Missing Values\n",
         "df['LoanAmount'].fillna(df['LoanAmount'].median(), inplace=True)\n",
         "df['Loan_Amount_Term'].fillna(df['Loan_Amount_Term'].median(), inplace=True)\n",
         "df['Credit_History'].fillna(df['Credit_History'].mode()[0], inplace=True)\n"
@@ -851,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -965,6 +967,7 @@
         }
       ],
       "source": [
+        "#After Handling Missing Values Checking again the sum of null values:\n",
         "df.isnull().sum()\n"
       ]
     },
@@ -981,23 +984,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "emTkBL4FgqD3"
       },
       "outputs": [],
       "source": [
+        "#Droping the Load_ID Column because we don' t need that \n",
         "df.drop('Loan_ID', axis=1, inplace=True)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "OjTS_f_3grn4"
       },
       "outputs": [],
       "source": [
+        "\n",
         "le = LabelEncoder()\n",
         "\n",
         "categorical_cols = [\n",
